<resources>
    <string name="app_name">Gensin Sekai</string>
    <string name="genshin_sekai2">Genshin Sekai</string>
    <string name="genshin_sekai_adalah_aplikasi_wiki_dari_game_genshin_impact_disini_kalian_bisa_liht_rekomendasi_build_smpi_bis_gcha_juga_loh">Genshin Sekai adalah aplikasi wiki dari game genshin impact, disini kalian bisa lihat rekomendasi build sampai bisa gacha juga loh</string>
    <string name="genshin_sekai1">Genshin Sekai</string>
    <string name="batas">---</string>
    <string name="bgpurple">bgpurple</string>
    <string name="keqing">keqing</string>
    <string name="shapeputih">shapeputih</string>
    <string name="keqingchibi">keqingchibi</string>
    <string name="button">button</string>
    <string name="keqing2">keqing</string>
    <string name="buttonutama">Button</string>
    <string name="start_now">START NOW</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="dynavx">Dynavx</string>
    <string name="profile1">Profile</string>
    <string name="collection">Collection</string>
    <string name="fight_together_fot_better_new">Fight together for better new</string>
    <string name="world">world.</string>
    <string name="bar1">bar1</string>
    <string name="bar3">bar3</string>
    <string name="bar4">bar4</string>
    <string name="bar2">bar2</string>
    <string name="keqinggg">keqinggg</string>
    <string name="logo">logo</string>
    <string name="eula">eula</string>
    <string name="kokomi">kokomi</string>
    <string name="hutao">hutao</string>
    <string name="gachaaa">Gacha</string>
    <string name="cek_profil_kamu_disini">Cek profil kamu disini</string>
    <string name="interactive_map">Interactive Map</string>
    <string name="collections">Collections</string>
    <string name="cek_koleksi_kamu_disini">Cek koleksi kamu disini</string>
    <string name="kamu_bisa_gacha_disini">Kamu bisa gacha disini</string>
    <string name="profile">Profile</string>
    <string name="cek_map_disini">Cek map disini</string>
    <string name="wish_1x">Wish 1x</string>
    <string name="gachagambar">gacha</string>
    <string name="gacha">Gacha</string>
    <string name="bgungu">bg</string>
    <string name="welcome_travellers">Welcome Travellers</string>
    <string name="bannerbg">banner</string>
    <string name="gachaa">Gacha</string>
    <string name="storage">Storage</string>
    <string name="map2">MAP</string>
    <string name="bgputihbriu">bgputihbriu</string>
    <string name="ayayaaaa">ayayaaaa</string>
    <string name="shapeeeeee">shapeeeeee</string>
</resources>