<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="400dp"
        android:layout_height="749dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/bgungu"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/bar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bggbiru" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:fontFamily="@font/poppinsextrabold"
        android:shadowColor="@color/birutuaayaya"
        android:text="@string/selamat_datang"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/dynavxx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="260dp"
        android:fontFamily="@font/poppinsextrabold"
        android:shadowColor="@color/white"
        android:text="@string/dynavx"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/fight_together_fot_better_new"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dynavxx"
        app:layout_constraintTop_toTopOf="@+id/dynavxx"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/world"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dynavxx"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/bar1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/bar1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:srcCompat="@drawable/shppjg" />

    <ImageView
        android:id="@+id/bar2"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/bar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bar1"
        app:srcCompat="@drawable/shppjg" />

    <ImageView
        android:id="@+id/bar3"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/bar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bar2"
        app:srcCompat="@drawable/shppjg"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/bar4"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/bar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bar3"
        app:srcCompat="@drawable/shppjg"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="115dp"
        android:layout_height="116dp"
        android:layout_marginTop="148dp"
        android:contentDescription="@string/keqinggg"
        app:layout_constraintEnd_toEndOf="@+id/bar1"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="@+id/bar1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/keqingchibi" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:itemTextColor="@color/birutuaayaya"
        app:itemIconTint="@color/birutuaayaya"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="117dp"
        android:layout_height="111dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/eula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="@+id/bar2"
        app:layout_constraintTop_toTopOf="@+id/bar2"
        app:srcCompat="@drawable/genshin_impact_stickers_pt3" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="129dp"
        android:layout_height="119dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/hutao"
        app:layout_constraintEnd_toEndOf="@+id/bar3"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="@+id/bar3"
        app:layout_constraintTop_toBottomOf="@+id/bar2"
        app:srcCompat="@drawable/hutaoooo" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="143dp"
        android:layout_height="134dp"
        android:layout_marginTop="284dp"
        android:contentDescription="@string/kokomi"
        app:layout_constraintEnd_toEndOf="@+id/bar4"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="@+id/bar4"
        app:layout_constraintTop_toTopOf="@+id/bar2"
        app:srcCompat="@drawable/kokomi"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/gacha"
        android:textColor="@color/birutuaayaya"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/bar1"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/bar1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/profile"
        android:textColor="@color/birutuaayaya"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/bar4"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/bar3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/storage"
        android:textColor="@color/birutuaayaya"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/bar3"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/bar2" />
    <TextView
        android:id="@+id/textView9"
        android:layout_width="195dp"
        android:layout_height="78dp"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/interactive_map"
        android:textColor="@color/birutuaayaya"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/bar2"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/bar1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kamu_bisa_gacha_disini"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cek_profil_kamu_disini"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cek_map_disini"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cek_koleksi_kamu_disini"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


</androidx.constraintlayout.widget.ConstraintLayout>