<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="449dp"
        android:layout_height="1042dp"
        android:layout_marginTop="-300dp"
        android:contentDescription="@string/bgpurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shapeungu" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="449dp"
        android:layout_height="601dp"
        android:layout_marginTop="-100dp"
        android:contentDescription="@string/bgputihbriu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bggg" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/_citypng_com_hd_white_genshin_impact_game_logo_png___2000x1205" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="47dp"
        android:contentDescription="@string/ayayaaaa"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@drawable/ayaya" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="560dp"
        android:layout_height="877dp"
        android:layout_marginBottom="-320dp"
        android:contentDescription="@string/shapeeeeee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/shape" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/poppinsextrabold"
        android:shadowColor="@color/birutuaayaya"
        android:text="@string/welcome_travellers"
        android:textColor="@color/birutuaayaya"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="361dp"
        android:layout_height="90dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/genshin_sekai_adalah_aplikasi_wiki_dari_game_genshin_impact_disini_kalian_bisa_liht_rekomendasi_build_smpi_bis_gcha_juga_loh"
        android:textAlignment="center"
        android:textColor="@color/birutuaayaya"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="124dp"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/batas"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/buttonutama"
        android:layout_width="230dp"
        android:layout_height="67dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/birutuaayaya"
        android:fontFamily="@font/poppinsextrabold"
        android:text="@string/start_now"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.022" />

</androidx.constraintlayout.widget.ConstraintLayout>