<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="589dp"
        android:layout_height="863dp"
        android:contentDescription="@string/bannerbg"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gachabg"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/tombolgacha"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="210dp"
        android:layout_height="81dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/white"
        android:text="@string/gachaa"
        android:textColor="@color/black"
        app:cornerRadius="30dp"
        app:icon="@drawable/item_intertwined_fate"
        app:iconSize="100dp"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/birutuaayaya" />

    <ImageView
        android:id="@+id/gambargacha"
        android:layout_width="329dp"
        android:layout_height="609dp"
        android:contentDescription="@string/gachagambar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gachaayaka"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/character_eula_card" />

</androidx.constraintlayout.widget.ConstraintLayout>